# finishline-audio

./: .coverage  .gitignore  APP_SUMMARY.md  AUTONOMOUS_MASTER_NOW.sh  CHANGELOG.md  CHEATSHEET.md  DISCOVERY.md  EXECUTE_NOW.md  EXPORT_VOCALS_NOW.sh  FINAL_MASTER_RUN.md  FINISHLINE_PROGRESS_INDEX.md  HUMAN_ACTIONS_REQUIRED.md  INTEGRATION_COMPLETE.md  MASTER_IMPLEMENTATION_GUIDE.md  Makefile  NEW_CHAT_CONTEXT.md  NEXT_CHAPTER.md  PHILOSOPHY_ALIGNMENT_CHECK.md  PLAN_SUMMARY.md  PRIORITY.md  QUICKSTART.md  QUICK_START.md  README.md  READY_TO_RUN.md  RUN_FULL_AUTONOMOUS.sh  RUN_STAND_TALL_NOW.sh  RUN_THIS_NOW.sh  SECURITY_AUDIT_REPORT.md  STAND_TALL_READY.md  STAND_TALL_VOCAL_SETUP.md  STAND_TALL_VOCAL_SETUP_V1_OLD.md  START_HERE.md  STATE.md  SYSTEM_READY.md  TECHNICAL_CONSIDERATIONS.md  TESTING_COMPLETE.md  TESTING_SETUP_SUMMARY.md  VISION.md  config.yaml  pyproject.toml  (+1 more)
docs/: API.md  ENDPOINT_REGISTRY.json  QC_REFINED_PLAN.md  README.md  index.md  manual_loop.md
output/: STAND_TALL_MASTER_INFO.md  STAND_TALL_PERFECT_MASTER_INFO.md  experiments.jsonl  stand_tall_premium_loud_preview.jsonl  stand_tall_premium_streaming_safe.jsonl  stand_tall_vocal_analysis.json
scripts/: analyze_vocal_dynamics.py  auto_export_vocal.py  batch_validate.py  configure_vocals_autonomous.py  export_vocals_analysis.py  generate_unique_lines.py  health_check.sh  print_new_chat_message.sh  qc_compare.py  run_smoke_tests.sh  run_tests_background.sh  smoke_copy_summary.sh  test_export_probe.sh  test_ui_export.sh  validate_streaming.py
tests/: README.md  test_analyze.py  test_master_premium.py  (+5 more)
(+109 files in other folders)
